Upgrade to Spring 6 version

--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'javax.servlet:jstl:1.2'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     // Spring WEB MVC API
-    implementation 'org.springframework:spring-webmvc:5.3.34'
+    implementation 'org.springframework:spring-webmvc:6.1.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
-
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
